--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ Lightet Blue: #def3f6
 	<title>Ocean Noises</title>
 	<link rel="stylesheet" href="ocean_noises.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
 	<section class="start">
