--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@ Lightet Blue: #def3f6
 	<link rel="stylesheet" href="ocean_noises.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script>
+		if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+		    	alert("This website is not meant for mobile devices. Please access on a PC computer. However, this website is compatible for larger mobile devices such as Tablets");
+			document.body.style.overflow = "hidden";
+			document.getElementById("firewall").style.display = "block";
+			
+		}
+	</script>
 </head>
 <body>
+	<div id="firewall" style="display:none; height:100vw;"><h1 style = "color:red; font-family: sans-serif"><strong>Website not available for mobile.</strong> <em>Sorry</em></h1></div>
 	<section class="start">
 		<div class="header">
 			<h1>Listen</h1>
